--- a/index.html
+++ b/index.html
@@ -78,13 +78,31 @@
         </div>
 
 
-        <div id="messages-area">
+        <div class="row justify-content-center">
+            <div id="messages-area" class="col-md-8 mt-2"></div>
+            <div class="form-group mt-2 col-md-8">
+                <input type="text" class="form-control" id="input-text" placeholder="Message Here . . . ">
+            </div>
+            <button type="submit" class="btn btn-default" id="send-text">Send</button>
+        </div>
 
+        <div class="modal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title">Error</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="form-group">
-            <input type="text" class="form-control" id="input-text" placeholder="Message Here . . . ">
-        </div>
-        <button type="submit" class="btn btn-default" id="send-text">Send</button>
     </div>
 
     <script type="text/javascript" src="assets/javascript/app.js"></script>
